@startuml Diagramme_Classe_Cotisation

class Utilisateur {
    - id : int
    - nomComplet : String
    - email : String
    - mot_passe : int
    - adresse : String
    - tel : String
}

class Role {
    - id : int
    - nom : String
}

class Client{
    - id : int
    - nom : string
    - prenom : string
    - email : string
    - tel : string
    
}

class Commande{
    - id : int
    - datCommande : Date
    - montantInitial : float
    - montantAvance : float
    
}


class StatutAppro{
    - id : int
    - nom : string
}


class LigneCommande{
    - id : int
    - qteCommande : int
    - prixReel : float
}

class ModePaiement{
    - id : int
    - mode : string
}

class Reglement{
    - id : int
    - date : Date
    - montant : float
}

class Produit{
    - id : int
    - libelle : string
    - prixVente : float
    - stockInitial : int
}

class Fournisseur{
    -id : int
    -nom : string
    -email : string
    -tel : string
    -adresse : string
}


class Approvisionnement{
    - id : int
    - refBl : string
    - dateAppro : Date
}

class LigneAppro{
    - id : int
    - qteAppro : int
    - qteRecu : int
    - prixReel : float
}

class Dette {
    - id : int
    - refDette : String
    - date: Date
    - montantInitial : float
    - montantPaye : float
    - resteDu : float
    - id_commande : int
}


Commande "1" --> "0..1" Dette
Client "1" --> "0..*" Dette


Utilisateur "0..*" --> "1" Role 
Client "1" --> "0..*" Commande 
Commande "1" --> "0..*" LigneCommande 
Produit "1" --> "0..*" LigneCommande 

Approvisionnement"0..*" --> "1" Fournisseur 
Approvisionnement"1" --> "0..*" LigneAppro 
Produit "1" --> "0..*" LigneAppro 

StatutAppro "1" --> "0..*" Approvisionnement
Commande "0..*" --> "1" ModePaiement 
Reglement "0..*" --> "1" Commande 

Approvisionnement"0..*" --> "1" Utilisateur 
Commande "0..*" --> "1" Utilisateur 










@enduml